# webusb

./: .gitmodules  README.md  index.html
.github/workflows/: firmware-build.yml  gh-pages.yml
css/: app.1cf041af.css  app.c603c6cf.css  chunk-vendors.1013230e.css  chunk-vendors.767e5b95.css  chunk-vendors.dcc8b569.css  chunk-vendors.eb11a4e4.css
firmware/: CMakeLists.txt  README.md  serial_scpi.c  test.c
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/: ChannelConfig.vue  ClockConfig.vue
frontend/src/lib/: serial.js
js/: app.2cc67c0d.js  app.2cc67c0d.js.map  app.4afe3799.js  app.4afe3799.js.map  app.81c447be.js  app.81c447be.js.map  app.85d267e2.js  app.85d267e2.js.map  app.a5164948.js  app.a5164948.js.map  app.dabaf2c9.js  app.dabaf2c9.js.map  app.e005e9c0.js  app.e005e9c0.js.map  app.f476bf84.js  app.f476bf84.js.map  chunk-vendors.6e972147.js  chunk-vendors.6e972147.js.map  chunk-vendors.77c7681f.js  chunk-vendors.77c7681f.js.map  chunk-vendors.9cb8913c.js  chunk-vendors.9cb8913c.js.map  chunk-vendors.bb8388ed.js  chunk-vendors.bb8388ed.js.map  chunk-vendors.c6e9e962.js  chunk-vendors.c6e9e962.js.map
